--- a/redknot-website/about.html
+++ b/redknot-website/about.html
@@ -35,7 +35,7 @@
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="images/ConsultingG1.png" alt="Red-Knot Consulting">
+        <img src="images/ConsultingH1.png" alt="Red-Knot Consulting">
       </a>
 
       <nav id="navbar" class="navbar">
