Add dropdown navigation for Visa Services menu
- Convert 'Visa Services' to dropdown with 7 service options
- Add comprehensive CSS styling for both desktop and mobile
- Implement JavaScript functionality for mobile dropdown interaction
- Include smooth animations and hover effects
- Maintain consistent design with existing navbar styles
- Services: Skilled Migration & PR, Work Permits, Business Immigration, Study Abroad, Tourist Visas, Post-Arrival Support, Documentation & Language

--- a/redknot-website/index.html
+++ b/redknot-website/index.html
@@ -73,7 +73,18 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="#services">Visa Services</a></li>
+          <li class="dropdown">
+            <a class="nav-link dropdown-toggle" href="#services">Visa Services <i class="fas fa-chevron-down"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="#services">Skilled Migration & PR</a></li>
+              <li><a href="#services">Work Permits</a></li>
+              <li><a href="#services">Business Immigration</a></li>
+              <li><a href="#services">Study Abroad</a></li>
+              <li><a href="#services">Tourist Visas</a></li>
+              <li><a href="#services">Post-Arrival Support</a></li>
+              <li><a href="#services">Documentation & Language</a></li>
+            </ul>
+          </li>
           <li><a class="nav-link scrollto" href="#process">Our Process</a></li>
           <li><a class="nav-link" href="about.html">About Us</a></li>
           <li><a class="nav-link scrollto" href="#testimonials">Success Stories</a></li>
