--- a/redknot-website/about.html
+++ b/redknot-website/about.html
@@ -41,7 +41,18 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link" href="index.html">Home</a></li>
-          <li><a class="nav-link" href="index.html#services">Visa Services</a></li>
+          <li class="dropdown">
+            <a class="nav-link dropdown-toggle" href="index.html#services">Visa Services <i class="fas fa-chevron-down"></i></a>
+            <ul class="dropdown-menu">
+              <li><a href="index.html#services">Skilled Migration & PR</a></li>
+              <li><a href="index.html#services">Work Permits</a></li>
+              <li><a href="index.html#services">Business Immigration</a></li>
+              <li><a href="index.html#services">Study Abroad</a></li>
+              <li><a href="index.html#services">Tourist Visas</a></li>
+              <li><a href="index.html#services">Post-Arrival Support</a></li>
+              <li><a href="index.html#services">Documentation & Language</a></li>
+            </ul>
+          </li>
           <li><a class="nav-link" href="index.html#process">Our Process</a></li>
           <li><a class="nav-link active" href="about.html">About Us</a></li>
           <li><a class="nav-link" href="index.html#testimonials">Success Stories</a></li>
