--- a/redknot-website/about.html
+++ b/redknot-website/about.html
@@ -45,15 +45,15 @@
         <ul>
           <li><a class="nav-link" href="index.html">Home</a></li>
           <li class="dropdown">
-            <a class="nav-link dropdown-toggle" href="index.html#services">Visa Services <i class="fas fa-chevron-down"></i></a>
+            <a class="nav-link dropdown-toggle" href="javascript:void(0)">Visa Services <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-              <li><a href="index.html#services">Skilled Migration & PR</a></li>
-              <li><a href="index.html#services">Work Permits</a></li>
-              <li><a href="index.html#services">Business Immigration</a></li>
-              <li><a href="index.html#services">Study Abroad</a></li>
-              <li><a href="index.html#services">Tourist Visas</a></li>
-              <li><a href="index.html#services">Post-Arrival Support</a></li>
-              <li><a href="index.html#services">Documentation & Language</a></li>
+              <li><a href="index.html#services" data-service="skilled-migration">Skilled Migration & PR</a></li>
+              <li><a href="index.html#services" data-service="work-permits">Work Permits</a></li>
+              <li><a href="index.html#services" data-service="business-immigration">Business Immigration</a></li>
+              <li><a href="index.html#services" data-service="study-abroad">Study Abroad</a></li>
+              <li><a href="index.html#services" data-service="tourist-visas">Tourist Visas</a></li>
+              <li><a href="index.html#services" data-service="post-arrival">Post-Arrival Support</a></li>
+              <li><a href="index.html#services" data-service="documentation">Documentation & Language</a></li>
             </ul>
           </li>
           <li><a class="nav-link" href="index.html#process">Our Process</a></li>
