--- a/redknot-website/index.html
+++ b/redknot-website/index.html
@@ -77,15 +77,15 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li class="dropdown">
-            <a class="nav-link dropdown-toggle" href="#services">Visa Services <i class="fas fa-chevron-down"></i></a>
+            <a class="nav-link dropdown-toggle" href="javascript:void(0)">Visa Services <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-              <li><a href="#services">Skilled Migration & PR</a></li>
-              <li><a href="#services">Work Permits</a></li>
-              <li><a href="#services">Business Immigration</a></li>
-              <li><a href="#services">Study Abroad</a></li>
-              <li><a href="#services">Tourist Visas</a></li>
-              <li><a href="#services">Post-Arrival Support</a></li>
-              <li><a href="#services">Documentation & Language</a></li>
+              <li><a href="#services" data-service="skilled-migration">Skilled Migration & PR</a></li>
+              <li><a href="#services" data-service="work-permits">Work Permits</a></li>
+              <li><a href="#services" data-service="business-immigration">Business Immigration</a></li>
+              <li><a href="#services" data-service="study-abroad">Study Abroad</a></li>
+              <li><a href="#services" data-service="tourist-visas">Tourist Visas</a></li>
+              <li><a href="#services" data-service="post-arrival">Post-Arrival Support</a></li>
+              <li><a href="#services" data-service="documentation">Documentation & Language</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#process">Our Process</a></li>
