Fix hamburger menu visibility issues in mobile portrait view
- Enhanced mobile navigation toggle contrast with stronger background and border
- Increased size and improved touch target (48x48px minimum) for better usability
- Added specific mobile portrait fixes for screens ≤576px
- Improved accessibility with proper ARIA labels, role, and tabindex
- Added focus states and keyboard navigation support
- Fixed z-index layering to ensure hamburger menu always appears on top
- Optimized header padding and logo sizing for mobile devices
- Added cross-browser compatibility with -webkit-user-select

--- a/redknot-website/about.html
+++ b/redknot-website/about.html
@@ -62,7 +62,7 @@
           <li><a class="nav-link" href="index.html#contact">Contact</a></li>
           <li><a class="getstarted" href="index.html#assessment">Free Assessment</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list mobile-nav-toggle" aria-label="Toggle mobile menu" role="button" tabindex="0"></i>
       </nav>
 
       
