--- a/redknot-website/index.html
+++ b/redknot-website/index.html
@@ -94,7 +94,7 @@
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#assessment">Free Assessment</a></li>
         </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
+        <i class="bi bi-list mobile-nav-toggle" aria-label="Toggle mobile menu" role="button" tabindex="0"></i>
       </nav>
 
       
