--- a/redknot-website/about.html
+++ b/redknot-website/about.html
@@ -47,7 +47,7 @@
           <li class="dropdown">
             <a class="nav-link dropdown-toggle" href="javascript:void(0)">Visa Services <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-              <li><a href="index.html#services" data-service="skilled-migration">Skilled Migration & PR</a></li>
+              <li><a href="skilled-migration.html">Skilled Migration & PR</a></li>
               <li><a href="index.html#services" data-service="work-permits">Work Permits</a></li>
               <li><a href="index.html#services" data-service="business-immigration">Business Immigration</a></li>
               <li><a href="index.html#services" data-service="study-abroad">Study Abroad</a></li>
