--- a/redknot-website/index.html
+++ b/redknot-website/index.html
@@ -79,7 +79,7 @@
           <li class="dropdown">
             <a class="nav-link dropdown-toggle" href="javascript:void(0)">Visa Services <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-              <li><a href="#services" data-service="skilled-migration">Skilled Migration & PR</a></li>
+              <li><a href="skilled-migration.html">Skilled Migration & PR</a></li>
               <li><a href="#services" data-service="work-permits">Work Permits</a></li>
               <li><a href="#services" data-service="business-immigration">Business Immigration</a></li>
               <li><a href="#services" data-service="study-abroad">Study Abroad</a></li>
@@ -247,7 +247,7 @@
             </div>
             <h3>Skilled Migration & Permanent Residency Programs</h3>
             <p>We help talented professionals and families secure permanent residency in top destinations such as Canada, Australia, New Zealand, and Europe. From profile assessment to application submission, we provide end-to-end support to ensure a smooth process.</p>
-            <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+            <a href="skilled-migration.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
 
