Add Work Permits page and update navigation
- Created new work-permits.html page with 10 countries (Germany, France, Czech Republic, Lithuania, Poland, Portugal, Slovakia, Croatia, Serbia, Vietnam)
- Updated navigation dropdowns across all pages to use shorter text ('Skilled Migration' and 'Work Permits')
- Removed 'More Countries Coming Soon' option from work permits page
- Updated all navigation links to point to the new work-permits.html page
- Added new service images for arrival support, employment search, and investor services
- All 'Get Started Today' buttons properly redirect to contact section

--- a/redknot-website/index.html
+++ b/redknot-website/index.html
@@ -79,8 +79,8 @@
           <li class="dropdown">
             <a class="nav-link dropdown-toggle" href="javascript:void(0)">Visa Services <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-              <li><a href="skilled-migration.html">Skilled Migration & PR</a></li>
-              <li><a href="#services" data-service="work-permits">Work Permits</a></li>
+              <li><a href="skilled-migration.html">Skilled Migration</a></li>
+              <li><a href="work-permits.html">Work Permits</a></li>
               <li><a href="#services" data-service="business-immigration">Business Immigration</a></li>
               <li><a href="#services" data-service="study-abroad">Study Abroad</a></li>
               <li><a href="#services" data-service="tourist-visas">Tourist Visas</a></li>
@@ -258,7 +258,7 @@
             </div>
             <h3>Work Permits & Overseas Employment Solutions</h3>
             <p>Our team assists you in finding the right job opportunities and obtaining work permits across Europe (Germany, Poland, Czech Republic, Slovakia, Latvia, and more) and beyond. We work closely with employers to ensure ethical placement and a successful start to your new career abroad.</p>
-            <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+            <a href="work-permits.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
 
