--- a/redknot-website/skilled-migration.html
+++ b/redknot-website/skilled-migration.html
@@ -47,8 +47,8 @@
           <li class="dropdown">
             <a class="nav-link dropdown-toggle active" href="javascript:void(0)">Visa Services <i class="fas fa-chevron-down"></i></a>
             <ul class="dropdown-menu">
-              <li><a href="skilled-migration.html" class="active">Skilled Migration & PR</a></li>
-              <li><a href="index.html#services" data-service="work-permits">Work Permits</a></li>
+              <li><a href="skilled-migration.html" class="active">Skilled Migration</a></li>
+              <li><a href="work-permits.html">Work Permits</a></li>
               <li><a href="index.html#services" data-service="business-immigration">Business Immigration</a></li>
               <li><a href="index.html#services" data-service="study-abroad">Study Abroad</a></li>
               <li><a href="index.html#services" data-service="tourist-visas">Tourist Visas</a></li>
