Add three beautiful coming soon pages with updated navigation
- Created investor-visa.html with full-screen background and golden glow text
- Created employment-search.html with responsive design and feature cards
- Created post-arrival-support.html with professional layout
- Updated navigation across all pages (Business Immigration → Investor Visa, Documentation → Employment Search)
- Enhanced text visibility with white text and golden glow effects
- Implemented responsive design with proper mobile breakpoints
- Updated service section links to point to new pages
- Removed launch dates for cleaner design
- Optimized feature card positioning and alignment

--- a/redknot-website/index.html
+++ b/redknot-website/index.html
@@ -81,11 +81,11 @@
             <ul class="dropdown-menu">
               <li><a href="skilled-migration.html">Skilled Migration</a></li>
               <li><a href="work-permits.html">Work Permits</a></li>
-              <li><a href="#services" data-service="business-immigration">Business Immigration</a></li>
+              <li><a href="investor-visa.html">Investor Visa</a></li>
               <li><a href="#services" data-service="study-abroad">Study Abroad</a></li>
               <li><a href="#services" data-service="tourist-visas">Tourist Visas</a></li>
-              <li><a href="#services" data-service="post-arrival">Post-Arrival Support</a></li>
-              <li><a href="#services" data-service="documentation">Documentation & Language</a></li>
+              <li><a href="post-arrival-support.html">Post-Arrival Support</a></li>
+              <li><a href="employment-search.html">Employment Search</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#process">Our Process</a></li>
@@ -269,7 +269,7 @@
             </div>
             <h3>Business & Investment Immigration</h3>
             <p>For entrepreneurs and investors seeking global expansion, we offer tailored programs that facilitate business setup and residency in countries offering attractive investment pathways. We help you navigate the legal and financial requirements with confidence.</p>
-            <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+            <a href="investor-visa.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
 
@@ -302,7 +302,7 @@
             </div>
             <h3>Settlement & Post-Arrival Support</h3>
             <p>We understand that moving abroad involves more than just paperwork. Our settlement services include help with accommodation, local registrations, orientation sessions, and connecting you with community resources to make you feel at home.</p>
-            <a href="#" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
+            <a href="post-arrival-support.html" class="readmore stretched-link">Learn more <i class="bi bi-arrow-right"></i></a>
           </div>
         </div>
 
@@ -316,7 +316,7 @@
             <div class="row align-items-center">
               <div class="col-lg-8">
                 <h3 class="mb-3" style="color: var(--uae-blue); font-weight: 700; font-size: 28px;">Complete Support Every Step of the Way</h3>
-                <p class="mb-3" style="color: var(--slate-700); font-size: 18px; line-height: 1.6;">From comprehensive documentation and language training to legal translations and credential assessments, we provide end-to-end support to ensure you meet every requirement confidently and on time.</p>
+                <p class="mb-3" style="color: var(--slate-700); font-size: 18px; line-height: 1.6;">From comprehensive <a href="employment-search.html" style="color: var(--uae-gold); font-weight: 500;">employment search and documentation support</a> to legal translations and credential assessments, we provide end-to-end support to ensure you meet every requirement confidently and on time.</p>
                 <div class="highlight-box mt-4 p-4" style="background: linear-gradient(135deg, rgba(10, 76, 150, 0.05), rgba(182, 138, 53, 0.05)); border-left: 4px solid var(--uae-gold); border-radius: 8px;">
                   <h4 class="mb-2" style="color: var(--uae-blue); font-weight: 600; font-size: 20px;">More Than Immigration Advisors</h4>
                   <p class="mb-0" style="color: var(--slate-600); font-size: 16px;">At Redknot Consultants LLC, we are your trusted partners in building a successful life abroad. We don't just process your applications — we guide, support, and empower you throughout your entire immigration journey.</p>
